--- a/src/main/resources/templates/enterprises.html
+++ b/src/main/resources/templates/enterprises.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Enterprises</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="webjars/bootstrap/5.2.2/css/bootstrap.min.css">
 </head>
 <body>
-<h1>Enterprises</h1>
-<table border="1" id="all-enterprises">
+<h1 style="text-align:center">Enterprises</h1>
+</p>
+
+<table class="table table-bordered" id="all-enterprises">
     <tr>
         <th>Name</th>
         <th>City</th>
