--- a/src/main/resources/templates/reportForm.html
+++ b/src/main/resources/templates/reportForm.html
@@ -2,14 +2,12 @@
 <html lang="en" xmlns:spring="http://www.w3.org/1999/XSL/Transform"
       xmlns:th="http://www.thymeleaf.org">
 
-
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -19,12 +17,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-
-<!--    <link rel="stylesheet" href="webjars/bootstrap/5.2.2/css/bootstrap.min.css">-->
-
-    <!--    <link rel="stylesheet" href="/css/style.css">-->
-    <!--    <link rel="stylesheet" href="/css/dropdowns.css">-->
-
 
     <link media="all" rel="stylesheet" th:href="@{/css/dropdowns.css}" type="text/css"/>
 
@@ -49,11 +41,17 @@
       th:object="${report}"
       method="post">
 
-    <p><input type="text" th:name="vehicleId" id="vehicleId" th:value="${vehicleId}"/></p>
 
     <div class="form-group">
-        <label for="type" class="col-sm-1 col-form-label">Type: </label>
+        <label for="type" class="col-sm-2 col-form-label">Vehicle Id: </label>
 
+        <div class="col-sm-4">
+            <input type="text" class="form-control-lg" th:name="vehicleId" id="vehicleId" th:value="${vehicleId}"/>
+        </div>
+    </div>
+
+    <div class="form-group">
+        <label for="type" class="col-sm-2 col-form-label">Type: </label>
         <div class="dropdown">
             <select class="form-control-lg" id="type" th:field="*{type}">
                 <option value="Mileage">Mileage</option>
@@ -62,9 +60,9 @@
     </div>
 
     <div class="form-group">
-        <label for="period" class="col-sm-1 col-form-label">Period: </label>
+        <label for="period" class="col-sm-1 col-form-label">Period:</label>
 
-        <div class="dropdown">
+        <div class="col-sm-4">
             <select class="form-control-lg" id="period" th:field="*{period}">
                 <option value="year">Year</option>
                 <option value="month">Month</option>
@@ -73,11 +71,11 @@
         </div>
     </div>
 
-    <div class="row form-group" align="center">
-        <label for="start" class="col-sm-1 col-form-label">Start:</label>
+    <div class="form-group">
+        <label for="datepicker1" class="col-sm-1 col-form-label">Start:</label>
         <div class="col-sm-4">
             <div class="input-group date" id="datepicker1">
-                <input type="text" class="form-control" th:field="*{start}">
+                <input type="text" class="form-control-lg" th:field="*{start}">
                 <span class="input-group-append">
                         <span class="input-group-text bg-white d-block">
                             <i class="fa fa-calendar"></i>
@@ -88,11 +86,11 @@
     </div>
 
     </p>
-    <div class="row form-group" align="center">
-        <label for="end" class="col-sm-1 col-form-label">End:</label>
+    <div class="form-group">
+        <label for="datepicker2" class="col-sm-1 col-form-label">End:</label>
         <div class="col-sm-4">
             <div class="input-group date" id="datepicker2">
-                <input type="text" class="form-control" th:field="*{end}">
+                <input type="text" class="form-control-lg" th:field="*{end}">
                 <span class="input-group-append">
                         <span class="input-group-text bg-white d-block">
                             <i class="fa fa-calendar"></i>
@@ -101,6 +99,8 @@
             </div>
         </div>
     </div>
+
+    </p>
 
     <p><input type="submit" value="Submit"/>
         <input type="reset" value="Reset"/></p>
