--- a/src/main/resources/templates/vehicle.html
+++ b/src/main/resources/templates/vehicle.html
@@ -9,8 +9,6 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-<!--    <link rel="stylesheet" href="/css/style.css">-->
-
 </head>
 <body>
 <h3>
@@ -19,7 +17,7 @@
     </div>
 </h3>
 
-<div class="container container-bordered">
+<div class="table table-bordered">
     <div class="row justify-content-md-center">
         <div class="col col-lg-2">Vin</div>
         <div class="col col-lg-2" th:text="${vehicle.vin}"/>
@@ -47,9 +45,6 @@
 
 <h3 style="text-align:center">Trips</h3>
 
-<!--
-<table border="1" style="width: 1500px">
--->
 <table  class="table table-bordered">
     <tr>
         <th>Started</th>
