--- a/src/main/resources/templates/vehicleForm.html
+++ b/src/main/resources/templates/vehicleForm.html
@@ -1,40 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:spring="http://www.w3.org/1999/XSL/Transform">
+<html lang="en"
+      xmlns:spring="http://www.w3.org/1999/XSL/Transform" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.min.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-datetimepicker/2.5.20/jquery.datetimepicker.full.min.js"></script>
 
-    <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>-->
-    <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.15.1/moment.min.js"></script>-->
-    <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
-    <!--    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/js/bootstrap-datetimepicker.min.js"></script>-->
-
-    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">-->
-    <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">-->
-
-    <!--    <link rel="stylesheet"-->
-    <!--          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.7.14/css/bootstrap-datetimepicker.min.css">-->
-
-    <!--    <link media="all" rel="stylesheet" th:href="@{/css/style.css}" type="text/css"/>-->
-    <!--    <link media="all" rel="stylesheet" th:href="@{/css/dropdowns.css}" type="text/css"/>-->
-    <!--    <link rel="stylesheet" href="webjars/bootstrap/5.2.2/css/bootstrap.min.css">-->
-
-    <!--    <link rel="stylesheet" href="/css/style.css">-->
-    <!--    <link rel="stylesheet" href="/css/dropdowns.css">-->
 
     <script type="text/javascript">
         $(function () {
             $('#datetimepicker1').datetimepicker();
         });
     </script>
-
 
 </head>
 <body>
@@ -44,6 +26,7 @@
     <th:block th:if="${!vehicle.isNew()}">Update vehicle</th:block>
 </h3>
 <hr>
+
 <form id="vehicle-form" class="form-horizontal" role="form" action="#" th:action="@{/vehicles/update_or_create}"
       th:object="${vehicle}"
       method="post">
@@ -59,9 +42,8 @@
 
     <div class="form-group">
         <label for="model" class="col-sm-2 control-label">Model: </label>
-
         <div class="dropdown">
-            <select class="form-control-lg" th:field="*{vehicleModel}">
+            <select class="form-control-lg" id="model" th:field="*{vehicleModel}">
                 <option th:each="model : ${models}"
                         th:value="${model.id}"
                         th:text="${model.name}"/>
@@ -70,10 +52,9 @@
     </div>
 
     <div class="form-group">
-        <label for="e" class="col-sm-2 control-label">Enterprise: </label>
-
+        <label for="enterprise" class="col-sm-2 control-label">Enterprise: </label>
         <div class="dropdown">
-            <select class="form-control-lg" th:field="*{enterprise}">
+            <select id="enterprise" class="form-control-lg" th:field="*{enterprise}">
                 <option th:each="e : ${enterprises}"
                         th:value="${e.id}"
                         th:text="${e.name}"/>
@@ -102,46 +83,30 @@
 
     <div class="form-group">
         <label for="year" class="col-sm-2 control-label">Production year: </label>
-
         <div class="col-sm-10">
             <input type="number" class="form-control-lg" id="year" th:field="*{productionYear}">
         </div>
     </div>
 
-<!--    <div class="container">-->
-<!--        <label for="purchaseDate" class="col-sm-1 col-form-label">Purchase date:</label>-->
-
-<!--        <div class="row">-->
-<!--            <div class='col-sm-6'>-->
-<!--                <div class="form-group">-->
-<!--                    <div class='input-group date' id='datetimepicker1'>-->
-<!--                        <input id="purchaseDate" type='text' class="form-control" th:value="${pDate}"-->
-<!--                               th:field="*{purchaseDate}"/>-->
-<!--                        <span class="input-group-addon">-->
-<!--            <span class="glyphicon glyphicon-calendar"></span>-->
-<!--          </span>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--        </div>-->
-<!--    </div>-->
-
-    <div class="row form-group" align="center">
-        <label for="end" class="col-sm-1 col-form-label">Purchase date:</label>
-        <div class="col-sm-4">
-            <div class="input-group date" id="datepicker2">
-                <input type="text" class="form-control" th:value="${pDate}" th:field="*{purchaseDate}">
-                <span class="input-group-append">
-                        <span class="input-group-text bg-white d-block">
-                            <i class="fa fa-calendar"></i>
-                        </span>
-                    </span>
-            </div>
+    <div class="form-group">
+        <label for="datetimepicker" class="col-sm-2 control-label">Purchase date:</label>
+        <div class="col-sm-10">
+            <input type="text" id="datetimepicker" class="form-control-lg" name="purchaseDateVal" th:value="${purchaseDateVal}">
         </div>
     </div>
+    <script>
+        $(document).ready(function(){
+            $('#datetimepicker').datetimepicker({
+                format: 'Y/m/d H:i', // Format to include hours and minutes
+                step: 10 // Step in minutes (1 minute)
+            });
+        });
+    </script>
 
+    </p>
     <p><input id="submit" type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
 </form>
+
 
 
 </body>
