--- a/src/main/resources/templates/reportForm.html
+++ b/src/main/resources/templates/reportForm.html
@@ -11,23 +11,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="stylesheet"
-          href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/js/bootstrap-datepicker.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.min.js"></script>
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.0/themes/base/jquery-ui.css">
+
 
     <link media="all" rel="stylesheet" th:href="@{/css/dropdowns.css}" type="text/css"/>
-
-    <script type="text/javascript">
-        $(function () {
-            $('#datepicker1').datepicker();
-        });
-        $(function () {
-            $('#datepicker2').datepicker();
-        });
-    </script>
 
 </head>
 <body>
@@ -41,17 +30,15 @@
       th:object="${report}"
       method="post">
 
-
-    <div class="form-group">
-        <label for="type" class="col-sm-2 col-form-label">Vehicle Id: </label>
-
-        <div class="col-sm-4">
-            <input type="text" class="form-control-lg" th:name="vehicleId" id="vehicleId" th:value="${vehicleId}"/>
-        </div>
+    <div class="col-sm-4">
+        <input type="text" class="form-control-lg" th:name="vehicleId" id="vehicleId" th:value="${vehicleId}"/>
+    </div>
     </div>
 
+
     <div class="form-group">
-        <label for="type" class="col-sm-2 col-form-label">Type: </label>
+        <label for="type" class="col-sm-1 col-form-label">Type: </label>
+
         <div class="dropdown">
             <select class="form-control-lg" id="type" th:field="*{type}">
                 <option value="Mileage">Mileage</option>
@@ -60,9 +47,9 @@
     </div>
 
     <div class="form-group">
-        <label for="period" class="col-sm-1 col-form-label">Period:</label>
+        <label for="period" class="col-sm-1 col-form-label">Period: </label>
 
-        <div class="col-sm-4">
+        <div class="dropdown">
             <select class="form-control-lg" id="period" th:field="*{period}">
                 <option value="year">Year</option>
                 <option value="month">Month</option>
@@ -72,35 +59,36 @@
     </div>
 
     <div class="form-group">
-        <label for="datepicker1" class="col-sm-1 col-form-label">Start:</label>
-        <div class="col-sm-4">
-            <div class="input-group date" id="datepicker1">
-                <input type="text" class="form-control-lg" th:field="*{start}">
-                <span class="input-group-append">
-                        <span class="input-group-text bg-white d-block">
-                            <i class="fa fa-calendar"></i>
-                        </span>
-                    </span>
-            </div>
+        <label for="start" class="col-sm-2 control-label">Start:</label>
+        <div class="col-sm-10">
+            <input type="text" id="start" class="form-control-lg" name="start" th:value="${start}">
         </div>
     </div>
+    <script>
+        $(document).ready(function(){
+            $('#start').datepicker({
+                format: 'Y/m/d', // Format to include hours and minutes
+            });
+        });
+    </script>
 
-    </p>
+
     <div class="form-group">
-        <label for="datepicker2" class="col-sm-1 col-form-label">End:</label>
-        <div class="col-sm-4">
-            <div class="input-group date" id="datepicker2">
-                <input type="text" class="form-control-lg" th:field="*{end}">
-                <span class="input-group-append">
-                        <span class="input-group-text bg-white d-block">
-                            <i class="fa fa-calendar"></i>
-                        </span>
-                    </span>
-            </div>
+        <label for="end" class="col-sm-2 control-label">End:</label>
+        <div class="col-sm-10">
+            <input type="text" id="end" class="form-control-lg" name="end" th:value="${end}">
         </div>
     </div>
+    <script>
+        $(document).ready(function(){
+            $('#end').datepicker({
+                format: 'Y/m/d', // Format to include hours and minutes
+            });
+        });
+    </script>
 
     </p>
+
 
     <p><input type="submit" value="Submit"/>
         <input type="reset" value="Reset"/></p>
