--- a/src/main/resources/templates/reportForm.html
+++ b/src/main/resources/templates/reportForm.html
@@ -61,14 +61,12 @@
     <div class="form-group">
         <label for="start" class="col-sm-2 control-label">Start:</label>
         <div class="col-sm-10">
-            <input type="text" id="start" class="form-control-lg" name="start" th:value="${start}">
+            <input type="text" id="start" class="form-control-lg" name="start" th:value="${start}" data-date-format="yyyy/mm/dd">
         </div>
     </div>
     <script>
         $(document).ready(function(){
-            $('#start').datepicker({
-                format: 'Y/m/d', // Format to include hours and minutes
-            });
+            $('#start').datepicker();
         });
     </script>
 
@@ -76,14 +74,12 @@
     <div class="form-group">
         <label for="end" class="col-sm-2 control-label">End:</label>
         <div class="col-sm-10">
-            <input type="text" id="end" class="form-control-lg" name="end" th:value="${end}">
+            <input type="text" id="end" class="form-control-lg" name="end" th:value="${end}" data-date-format="yyyy/mm/dd">
         </div>
     </div>
     <script>
         $(document).ready(function(){
-            $('#end').datepicker({
-                format: 'Y/m/d', // Format to include hours and minutes
-            });
+            $('#end').datepicker();
         });
     </script>
 
